<?xml version="1.0"?>
<package format="2">
  <name>my_slam_interfaces</name>
  <version>0.0.0</version>
  <description>The my_slam_interfaces package</description>

  <maintainer email="soumyajeet17@todo.todo">soumyajeet17</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Execution (runtime) dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Additional info/tools can go here -->
  </export>
</package>

